--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,3 +4,4 @@ github.diff-root-path=diff
 github.prefix-path=test-prefix
 
 spring.application.authentication.token=dummy-token-for-test
+spring.application.database.default-schema=dbo
