Fixing the @Transaction issue
The set db in context should be done before starting transaction as the datasource will be used for getting connection at the start of transaction, so setting the db during a transaction does not have any affect.

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.eclipse.jgit:org.eclipse.jgit:7.3.0.202506031305-r'
 
     runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
