Adding build-test action in github

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,6 +2,7 @@ github.local-mode-for-test=true
 github.base-root-path=base
 github.diff-root-path=diff
 github.prefix-path=test-prefix
+github.token=dummy-token-for-test
 
 spring.application.authentication.token=dummy-token-for-test
 spring.application.database.default-schema=dbo
