Adding prometheus and fixing secutiry

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.eclipse.jgit:org.eclipse.jgit:7.3.0.202506031305-r'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 
     runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 
