--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,9 @@ spring:
       default-schema: dbo
     authentication:
       token: test-token
+  security:
+    basic:
+      enabled: false
   datasources:
     dbs:
 #       database2:
