--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -3,6 +3,7 @@ name: Build & push image
 on:
   push:
     branches: [ main ]
+    tags: [ 'v*' ]
 
 jobs:
   docker:
@@ -14,6 +15,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to GHCR
         uses: docker/login-action@v3
@@ -27,16 +31,20 @@ jobs:
         run: |
           VERSION=$(grep -Po "(?<=version = ')[^']+" build.gradle)
           if [ -z "$VERSION" ]; then echo "Failed to parse version" && exit 1; fi
-
           REPO_LOWER=$(echo "${GITHUB_REPOSITORY}" | tr '[:upper:]' '[:lower:]')
           IMAGE="ghcr.io/$REPO_LOWER"
           SHA_TAG=${GITHUB_SHA::12}
-
+          # If this is a tag push (vX.Y.Z), use that tag explicitly
+          if [[ "${GITHUB_REF}" == refs/tags/v* ]]; then
+            RELEASE_TAG=${GITHUB_REF#refs/tags/}
+            echo "release_tag=$RELEASE_TAG" >> $GITHUB_OUTPUT
+          fi
           echo "image=$IMAGE" >> $GITHUB_OUTPUT
           echo "version_tag=$VERSION" >> $GITHUB_OUTPUT
           echo "sha_tag=$SHA_TAG" >> $GITHUB_OUTPUT
 
       - name: Build and push Docker image
+        id: buildpush
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -46,9 +54,14 @@ jobs:
             ${{ steps.meta.outputs.image }}:${{ steps.meta.outputs.version_tag }}
             ${{ steps.meta.outputs.image }}:${{ steps.meta.outputs.sha_tag }}
             ${{ steps.meta.outputs.image }}:latest
+            ${{ steps.meta.outputs.image }}:${{ steps.meta.outputs.release_tag }}
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.version=${{ steps.meta.outputs.version_tag }}
             org.opencontainers.image.title=Adous
             org.opencontainers.image.description=Synchronize SQL Server schemas with Git (DB as Code)
+
+      - name: Image digest
+        run: | 
+          echo "Image digest: ${{ steps.buildpush.outputs.digest }}"
