Fixing the workflow for tagging image
Tagging image with realese that was failing when release tag was null.

--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -54,7 +54,7 @@ jobs:
             ${{ steps.meta.outputs.image }}:${{ steps.meta.outputs.version_tag }}
             ${{ steps.meta.outputs.image }}:${{ steps.meta.outputs.sha_tag }}
             ${{ steps.meta.outputs.image }}:latest
-            ${{ steps.meta.outputs.image }}:${{ steps.meta.outputs.release_tag }}
+            ${{ steps.meta.outputs.release_tag && format('{0}:{1}', steps.meta.outputs.image, steps.meta.outputs.release_tag) || '' }}
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.revision=${{ github.sha }}
