--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -1,9 +1,13 @@
 name: Build & push image
 
 on:
+  pull_request:
   push:
-    branches: [ main ]
-    tags: [ 'v*' ]
+    branches:
+      - main
+#  push:
+#    branches: [ main ]
+#    tags: [ 'v*' ]
 
 jobs:
   docker:
